--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,8 +2,9 @@ name: Build Docker Image on PR
 
 # Trigger the workflow when a pull request is opened or updated targeting the 'main' branch
 on:
-  pull_request:
-    branches: [ main ]
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -12,19 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Docker Registry
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .  # Path to your Dockerfile
-          file: ./Dockerfile  
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/startup_model:latest
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/startup_model:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/startup_model:latest
